--- a/mbdyn/manual/input/elemaero.tex
+++ b/mbdyn/manual/input/elemaero.tex
@@ -184,8 +184,7 @@ and properties.
 
 \begin{figure}[h]
   \centering
-    %\includegraphics[width=80mm]{airfoil.pdf}
-    \includegraphics[width=80mm]{airfoil.eps}
+    \includegraphics[width=80mm]{airfoil}
   \caption{Airfoil geometry}\label{fig:AIRFOIL}
 \end{figure}
 
