fix windows build (by Reinhard Resch)

--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -24,6 +24,7 @@ MBDyn 1.X-Devel
 		- fixed math parser bug with function calls in expressions
 		- fixed deadlock in recursive string parser calls
 		- fixed echo of modal joint record 12 (noted by Timothy Jim)
+		- fixed Windows build of mbdyn_util_oct.oct (Reinhard Resch)
 
 MBDyn 1.6.0
 	Enhancements:
