Added Rob Bezier joint

--- a/mbdyn/manual/input/logfile.tex
+++ b/mbdyn/manual/input/logfile.tex
@@ -326,6 +326,20 @@ All data are on one line, without continuation.
 Both \kw{rod} and \kw{rod with offset} joints are logged
 in this form.
 
+\subsection{rod bezier}
+The \kw{rod bezier} joint
+%\begin{verbatim}
+\begin{Verbatim}[commandchars=\\\{\}]
+	\kw{rod bezier}: \bnt{label}
+		\bnt{node_1_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_1} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_2}
+		\bnt{node_2_label} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_3} (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_4}
+\end{Verbatim}
+%\end{verbatim}
+The \nt{label} of the joint, followed by the label of node 1, 
+followed by the offsets 1 and 2 (in the reference frame of the
+node) and the same for node 2 and offsets 3 and 4.
+All data are on one line, without continuation.
+
 \subsection{spherical hinge}
 The \kw{spherical hinge} joint
 %\begin{verbatim}
