--- a/mbdyn/manual/input/elements.tex
+++ b/mbdyn/manual/input/elements.tex
@@ -5244,7 +5244,99 @@ The syntax is:
 Analogous to the \kw{rod} joint with the optional offsets;
 see Section~\ref{sec:EL:STRUCT:JOINT:ROD} for details.
 
+\subsection{Rod Bezier}
+\label{sec:EL:STRUCT:JOINT:ROD_BEZIER}
+This joint, in analogy with the \kw{rod} joint, represents a force 
+that acts between two points each rigidly attached to a 
+\htmlref{\kw{structural node}}{sec:NODE:STRUCTURAL}.\\ The force on 
+node 1 acts along the line connecting the insertion point, 
+defined in the reference frame of the node by 
+\bnt{relative\_offset\_1} and a first intermediate point defined,
+also in the reference frame of the node, by \bnt{relative\_offset\_2}.
+In the same way, the force on node 2 is applied at the insertion 
+point of the element, defined in the reference frame of node 2 by
+\bnt{relative\_offset\_4} and acts along the line connecting a
+second intermediate point defined by \bnt{relative\_offset\_3}. \\
+The element internally is represented as a B\'ezier spline of order 3,
+which length and instantaneous lengthening velocity are calculated
+using Gauss-Legendre quadrature.\\ The absolute value of the force
+depends on the strain and strain rate of the curve as in the
+standard \kw{rod} element (see Section~\ref{sec:EL:STRUCT:JOINT:ROD})
+as determined by the 
+\htmlref{\ty{ConstitutiveLaw}\bkw{1D}}{sec:ConstitutiveLaw} 
+\bnt{const\_law}.
 
+\begin{figure}
+\centering
+\includegraphics[width=.7\textwidth]{rod_bezier}
+\caption{The \kw{rod bezier} element}
+\label{fig:EL:STRUCT:JOINT:ROD_BEZIER}
+\end{figure}
+
+The syntax is:
+%\begin{verbatim}
+\begin{Verbatim}[commandchars=\\\{\}]
+	\bnt{joint_type} ::= \kw{rod bezier}
+
+	\bnt{joint_arglist} ::=
+		\bnt{node_1_label} ,
+			(\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_1} ,
+			(\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_2} ,
+		\bnt{node_2_label} ,
+			(\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_3} ,
+			(\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_4} ,
+		\{ (\ty{real}) \bnt{rod_length} | \kw{from nodes} \} ,
+		[ \kw{integration order} , (\ty{integer}) \bnt{order} ] ,
+		[ \kw{integration segments} , (\ty{integer}) \bnt{segments} ] ,
+        (\htmlref{\ty{ConstitutiveLaw}\bkw{1D}}{sec:ConstitutiveLaw}) \bnt{const_law}
+\end{Verbatim}
+%\end{verbatim}			
+Optional parameters \kw{integration order} and \kw{integration segments}
+modify the behavior Gauss-Legendre quadrature rule used to 
+calculate the length and the instantaneous lengthening velocity of the
+element. As the name suggest, the first argument controls the order of
+the integration scheme; if not specified, it defaults to 2. The maximum
+order of integration currently implemented is 10. \\
+The second argument sets the number of segments in which the B\'ezier curve
+is split in the integration; it not specified, it defaults to 3.
+
+\subsubsection{Output}
+The output occurs in the \texttt{.jnt} file, which contains:
+\begin{itemize}
+\item column 1: the label
+
+\item columns 2--4: the three components of the internal force in the 
+	reference frame of the element (column 2, component $x$, 
+	contains the force)
+
+\item columns 5--7: the three components of the internal moment in the 
+	reference frame of the element (always zero)
+
+\item columns 8--10: the three components of the force acting on node 1 
+	in the global reference frame
+
+\item columns 11--13: the three components of the internal moment in 
+	the global reference frame (always zero)
+
+\item columns 14--16: the three components of the force acting on node 2 
+	in the global reference frame
+
+\item column 17: the length of the rod
+
+\item columns 18--20: the three components of the line of action of the force 
+acting on node 1 in the global reference frame (a unit vector)
+
+\item columns 21--23: the three components of the line of action of the force 
+acting on node 2 in the global reference frame (a unit vector)
+
+\item column 24: the length rate of the rot (derivative of length wrt/ time)
+
+\item optional data appended by the constitutive law
+\end{itemize}
+
+\subsubsection{Private Data}
+The element exposes its private data in analogy with what happens in 
+the \kw{rod} element (see Section~\ref{sec:EL:STRUCT:JOINT:ROD}).
 
 \subsection{Spherical hinge}
 \label{sec:EL:STRUCT:JOINT:SPHERICAL_HINGE}
