--- a/mbdyn/manual/input/elements.tex
+++ b/mbdyn/manual/input/elements.tex
@@ -4582,8 +4582,8 @@ and orientation of the corresponding FEM nodes.
         \bnt{mode_number} ,
         [ \kw{list} , \bnt{mode} [ , ... ] , ]
         [ \kw{initial value} ,
-            \{ \kw{mode} , \bnt{n} , \bnt{q_n} , \bnt{qP_n} [ , ... ]
-                | \bnt{q_1} , \bnt{qP_1} [ ... ] \} , ]
+            \{ \kw{mode} , \bnt{j} , \bnt{q_j} , \bnt{qP_j} [ , ... ]  # 1 <= \nt{j} <= \nt{mode_number}
+                | \bnt{q_1} , \bnt{qP_1} [ , ... ] \} , ]
         \{ \bnt{fem_node_number} | \kw{from file} \} ,
         [ \{ \kw{no damping}
             | \kw{damping from file}
