--- a/mbdyn/TODO
+++ b/mbdyn/TODO
@@ -9,6 +9,13 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
+################################################################
+#                                                              #
+#  See <https://www.mbdyn.org/?Developers_corner___TODO_list>  #
+#                                                              #
+################################################################
+
+
 
 A. Configuration:
 
