--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -9,9 +9,8 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
-MBDyn 1.X-Devel
+MBDyn 1.6.1
 	Enhancements:
-		- added screw joint (Mauro Manetti & Marco Morandini)
 		- added hostname support to utils
 		- added module for file drive input from LeapMotion device
 		- rod without offset now works with displacement nodes
