--- a/mbdyn/NEWS
+++ b/mbdyn/NEWS
@@ -9,6 +9,8 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
+* Jun 19, 2015: release of MBDyn 1.6.1
+
 * Dec 15, 2014: release of MBDyn 1.6.0
 
 * Aug 01, 2014: release of MBDyn 1.5.6
