--- a/mbdyn/manual/input/general.tex
+++ b/mbdyn/manual/input/general.tex
@@ -170,7 +170,7 @@ Real values are stored with the maximum precision allowed by the underlying
 user@host:~> mbdyn -H
 
 MBDyn - MultiBody Dynamics 1.X-Devel
-compiled on Sep  3 2012 at 12:16:44
+configured on Sep  3 2012 at 12:16:44
 
 Copyright 1996-2015 (C) Paolo Mantegazza and Pierangelo Masarati,
 Dipartimento di Ingegneria Aerospaziale <http://www.aero.polimi.it/>
@@ -1574,15 +1574,12 @@ in Section~\ref{sec:CONTROLDATA:DEFAULTOUTPUT}.
 The \kw{remark} directive:
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{card} ::= \kw{remark} : " \bnt{remark_string} "
-        [ , \bnt{math_expression} [ , ... ] ] ;
+    \bnt{card} ::= \kw{remark} [ : \bnt{math_expression} [ , ... ] ] ;
 \end{Verbatim}
 %\end{verbatim}
-This directive simply prints to stdout the string \nt{remark\_string} and
-optionally evaluates and prints any subsequent expression \nt{math\_expression}
-according to the \kw{set} directive.
-It is used to allow rough input debugging, where the file name and line 
-is logged, followed by a message and by the evaluation of any expression. 
+This directive simply prints to stdout the (list of) expression(s) \nt{math\_expression}.
+It is used to allow rough input debugging. The file name and line number
+are logged first, followed by the result of the evaluation of the expression(s list). 
 
 \paragraph{Example.} \
 A file ``remarks'', containing only the statements
@@ -1600,8 +1597,8 @@ results in
 \begin{verbatim}
 user@host:~>$ mbdyn -f remarks
 
-MBDyn - Multi-Body Dynamics 1.2.5
-compiled on Nov 18 2005 at 15:15:39
+MBDyn - Multi-Body Dynamics 1.6.2
+configured on Jun 26 2015 at 10:17:02
 
 Copyright 1996-2015 (C) Paolo Mantegazza and Pierangelo Masarati,
 Dipartimento di Ingegneria Aerospaziale <http://www.aero.polimi.it/>
@@ -1619,7 +1616,8 @@ line 8, file <remarks>: Stiffness properties, 1e+06, 1e+06, 1000, 1000
 MBDyn terminated normally
 user@host:~>$
 \end{verbatim}
-
+Notice that in the example above the first expression is actually a string,
+as it was required up to version 1.6.1; this is no longer required.
 
 \subsection{Set}
 The \kw{set} directive:
