fix coulomb friction input

--- a/mbdyn/manual/input/general.tex
+++ b/mbdyn/manual/input/general.tex
@@ -3026,9 +3026,9 @@ The input format is:
     \bnt{friction_model} ::= \kw{discrete coulomb}
 
     \bnt{friction_arglist} ::=
-        [ \kw{sigma2} , \bnt{sigma2} , ]
-        [ \kw{velocity ratio} , \bnt{vel_ratio} , ]
         (\htmlref{\ty{ScalarFunction}}{sec:ScalarFunction}) \bnt{friction_function}
+        [, \kw{sigma2} , \bnt{sigma2} ]
+        [, \kw{velocity ratio} , \bnt{vel_ratio} ]
 \end{Verbatim}
 %\end{verbatim}
     where \nt{sigma2} gives the viscous friction;
