--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -12,6 +12,9 @@ Paolo Mantegazza        <mantegazza@aero.polimi.it>
 MBDyn 1.X-Devel
 	Enhancements:
 		- added screw joint (Mauro Manetti & Marco Morandini)
+		- (optional) new handling of math expressions and
+		  "string" drive caller (With the contribution
+		  of Ankit Aggarwal during Google Summer of Code 2015)
 	Backward compatibility issues:
 		- output of "remarks" changed
 	Known issues:
